--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,6 +39,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'catppuccin/tmux#latest'
+
+set-option -g default-shell /usr/bin/zsh
 
 run '~/.tmux/plugins/tpm/tpm'
 
