--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,14 +32,17 @@ bind -n M-] select-pane -R
 bind -n M-Left previous-window
 bind -n M-Right next-window
 
-set -g @catppuccin_flavour 'mocha'
-
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'catppuccin/tmux#latest'
+
+# theme
+set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @tokyo-night-tmux_window_id_style digital
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style dsquare
 
 set-option -g default-shell /usr/bin/zsh
 
