--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,6 +43,10 @@ set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @tokyo-night-tmux_window_id_style digital
 set -g @tokyo-night-tmux_pane_id_style hsquare
 set -g @tokyo-night-tmux_zoom_id_style dsquare
+set -g @tokyo-night-tmux_show_netspeed 0 
+set -g @tokyo-night-tmux_date_format DMY
+set -g @tokyo-night-tmux_show_path 1
+set -g @tokyo-night-tmux_path_format 'full' 
 
 set-option -g default-shell /usr/bin/zsh
 
