feat(tmux): config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,20 +35,14 @@ bind -n M-Right next-window
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # theme
-set -g @plugin "janoamaral/tokyo-night-tmux"
-set -g @tokyo-night-tmux_window_id_style digital
-set -g @tokyo-night-tmux_pane_id_style hsquare
-set -g @tokyo-night-tmux_zoom_id_style dsquare
-set -g @tokyo-night-tmux_show_netspeed 0 
-set -g @tokyo-night-tmux_date_format DMY
-set -g @tokyo-night-tmux_show_path 1
-set -g @tokyo-night-tmux_path_format 'full' 
+set -g @plugin 'dracula/tmux'
+set -g @dracula-plugins "cpu-usage gpu-usage ram-usage"
+set -g @dracula-show-powerline true
 
-set-option -g default-shell /usr/bin/zsh
+# set-option -g default-shell /usr/bin/zsh
 
 run '~/.tmux/plugins/tpm/tpm'
 
