--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,9 +38,14 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # theme
-set -g @plugin 'dracula/tmux'
-set -g @dracula-plugins "cpu-usage gpu-usage ram-usage"
-set -g @dracula-show-powerline true
+set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @catppuccin_flavor 'macchiato'
+
+# session-persistance
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
 
 # set-option -g default-shell /usr/bin/zsh
 
