--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,16 +38,12 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # theme
-set -g @plugin 'catppuccin/tmux#v2.1.3'
-set -g @plugin 'tmux-plugins/tpm'
-set -g @catppuccin_flavor 'macchiato'
+set -g @plugin 'Nybkox/tmux-kanagawa'
+set -g @kanagawa-theme 'wave'
+set -g @kanagawa-plugins "cpu-usage ram-usage weather" 
+set -g @kanagawa-show-powerline true
 
-# session-persistance
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on'
-
-# set-option -g default-shell /usr/bin/zsh
+set-option -g default-shell /usr/bin/zsh
 
 run '~/.tmux/plugins/tpm/tpm'
 
@@ -60,3 +56,5 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+set -g window-style "bg=default"
